<resources>
    <string name="app_name">VAWfreePH</string>
    <string name="facebook_app_id">1505268962849523</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="signin">Sign in</string>
    <string name="cantConnect">Connection Failed!</string>
    <string name="register">Register</string>
    <string name="account">Account Details</string>
    <string name="personal">Personal Information</string>
    <string name="confirm">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="full_name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="submit">SUBMIT</string>
    <string name="settings">Settings</string>
    <string name="update">UPDATE</string>
    <string name="change_password_dialog">Enter your email address below and we\'ll send your password!</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="section_style_1">Style 1</string>
    <string name="section_style_2">Style 2</string>
    <string name="PDF">PDF</string>
    <string name="thirtysecs">10 secs</string>
    <string name="onemin">30 secs</string>
    <string name="fivemins">1 min</string>
    <string name="make_call">Call</string>
    <string name="fake_name">Enter name</string>
    <string name="fake_number">Enter phone number</string>
    <string name="title_activity_fake_ringing">FakeRingingActivity</string>
    <string name="title_activity_fake_call_receiver">FakeCallReceiver</string>
    <string name="incomingcall">Incoming Call</string>
    <string name="fakecallname">Secret Name</string>
    <string name="fakecallnumber">Secret Number</string>
    <string name="fakecalltime">0:01</string>
    <string name="about_app">
        VAWfreePH is a personal safety mobile app developed through the partnership of Philippine Commission on Women (PCW) and Technological Institute of the Philippines, Quezon City (TIP-QC).
        This app aims to provide public awareness and to popularize provisions of existing women human rights laws such as the RA 9262 or Anti-Violence Against Women Act and RA 8353 or the Anti-Rape Act among others and to promote advocacy for a safer and fair environment for women.
        This mobile app features emergency modules which includes sending discreet SMS message to three (3) selected contacts alerting them of the exact location of the user and SOS button that intends to catch the attention of the people around the user during times of crisis.
        Through this app, user can search for the nearest hospitals and/or police stations that provide services to VAW victim-survivor.
        Furthermore, this app contains helplines where VAW victim-survivor can seek further assistance.
        Aside from the safety and helpline features, the app provides information to user on the existing women human rights-related laws.
    </string>
    <string name="title_1">Integrated Bar of the Philippines</string>
    <string name="acr_1">acronym: IBP</string>
    <string name="email_1">ibp_national@yahoo.com</string>
    <string name="num_1">+631-3014</string>
    <string name="num_1_1">+631-3018</string>
    <string name="title_2">Sentro Ng Alternatibong Lingap Panlegal</string>
    <string name="acr_2">acronym: SALIGAN</string>
    <string name="email_2">saligan@saligan.org</string>
    <string name="num_2">+426-6001</string>
    <string name="title_3">U.P. Women’s Lawyer Circle</string>
    <string name="acr_3">acronym: U.P. WILOCI</string>
    <string name="email_3">upwiloci@yahoo.com</string>
    <string name="num_3">+3538762</string>
    <string name="num_3_1">+639175839343 – Globe</string>
    <string name="num_3_2">+639199918264 – Smart</string>
    <string name="title_4">Women Lawyers Association of the Philippines Incorporated</string>
    <string name="acr_4">acronym: WLAP</string>
    <string name="email_4">wlap_1940@yahoo.com</string>
    <string name="num_4">+63(2)7217738</string>
    <string name="title_5">Women’s Legal and Human Rights Bureau Inc.</string>
    <string name="acr_5">acronym: WLB</string>
    <string name="email_5">womenslegalbureau@yahoo.com</string>
    <string name="num_5">+9214389</string>
    <string name="title_6">Department of Social Welfare and Development</string>
    <string name="acr_6">acronym: DSWD</string>
    <string name="email_6">foncr@dswd.gov.ph</string>
    <string name="num_6">+734-8639</string>
    <string name="title_7">DSWD-NCR-The Haven-National Center for Women</string>
    <string name="acr_7">acronym: DSWD-NCR- The Haven for Women</string>
    <string name="email_7">haven_ncr@yahoo.com</string>
    <string name="num_7">+807-1588</string>
    <string name="title_8">Department of Health – Disease Prevention and Control Buraeu – Women and Men’s Health Development Division</string>
    <string name="acr_8">acronym: DOH-DPCB-WMHDD</string>
    <string name="email_8">fho.vawc@gmail.com</string>
    <string name="email_8_1">familyhealthoffice@gmail.com</string>
    <string name="num_8">+63(2)6517800</string>
    <string name="title_9">National Bureau of Investigation Anti-Violence Against Women and Children’s Desk</string>
    <string name="acr_9">acronym: NBI–AVAWCD</string>
    <string name="email_9">nbi.gov.ph</string>
    <string name="num_9">+525-8231</string>
    <string name="title_10">Women and Children Protection Center</string>
    <string name="acr_10">acronym: WCPC</string>
    <string name="email_10">wcpc_pnp@yahoo.com</string>
    <string name="num_10">+411-0441</string>
    <string name="num_10_1">+410-3213</string>
    <string name="title_11">Public Attorney\'s Office</string>
    <string name="acr_11">acronym: PAO</string>
    <string name="email_11">pao_executive@yahoo.com</string>
    <string name="num_11">+929-9010</string>
    <string name="num_11_1">+929-9436</string>
    <string name="title_12">UP Philippine General Hospital-Child Protection Unit</string>
    <string name="acr_12">acronym: UP-PGH-CPU</string>
    <string name="email_12">pgh.cpu@gmail.com</string>
    <string name="num_12">+353-0667</string>
    <string name="title_13">QC Protection Center for Victims of Violence of Gender Inequality</string>
    <string name="acr_13">acronym: QCPC</string>
    <string name="email_13">quezoncityprotectioncenter@gmail.com</string>
    <string name="num_13">+426-1314</string>
    <string name="title_14">ABS-CBN Lingkod Kapamilya Foundation, Inc. Bantay Bata 163</string>
    <string name="acr_14">acronym: ALKFI-BB 163</string>
    <string name="email_14">bantaybata163@abs-cbnfoundation.com</string>
    <string name="email_14_1">bb163@abs-cbnfoundation.com</string>
    <string name="num_14">+415-6390</string>
    <string name="title_15">Batis Center for Women</string>
    <string name="acr_15">acronym: BCW</string>
    <string name="email_15">batiscenter@yahoo.com</string>
    <string name="num_15">+709-7481</string>
    <string name="title_16">The Ruben M. Tansexo, S.J. Center for Family ministries</string>
    <string name="acr_16">acronym: RMT-CEFAM</string>
    <string name="email_16">cefam@admu.edu.ph</string>
    <string name="num_16">+426-4289</string>
    <string name="title_17">CRIBS FOUNDATION, INC.</string>
    <string name="acr_17">acronym: Not applicable</string>
    <string name="email_17">vrp.cribs@gmail.com</string>
    <string name="num_17">+681-5921</string>
    <string name="num_17_1">+681-8078</string>
    <string name="title_18">Coalition Against Organization-Asia Pacific</string>
    <string name="acr_18">acronym: CATW-AP</string>
    <string name="email_18">catw-ap@catw-ap.org.ph</string>
    <string name="num_18">+434-2149</string>
    <string name="title_19">Development Action for Women Network</string>
    <string name="acr_19">acronym: DAWN</string>
    <string name="email_19">dawnphil@pldtdsl.net</string>
    <string name="num_19">+526-9098</string>
    <string name="title_20">Heart of Mary Villa (religions of the good shepherd)</string>
    <string name="acr_20">acronym: HMV</string>
    <string name="email_20">goodsheperdsisters.org.ph</string>
    <string name="num_20">+913-0875</string>
    <string name="title_21">Hospicio de San Jose</string>
    <string name="acr_21">acronym: HSJ</string>
    <string name="email_21">socialserviceshsj@gmail.com</string>
    <string name="num_21">+734-2366</string>
    <string name="title_22">Ruhama Center for Women</string>
    <string name="acr_22">acronym: Ruhama</string>
    <string name="email_22">ruhamacenterforwomen@gmail.com</string>
    <string name="num_22">+239-4303</string>
    <string name="title_23">Saklolo at Gabay ng Ina at Pamilya</string>
    <string name="acr_23">acronym: SAGIP</string>
    <string name="email_23">sagipcenter@yahoo.com</string>
    <string name="num_23">+862-0061</string>
    <string name="title_24">Salvatorian Pastoral Care for Children</string>
    <string name="acr_24">acronym: SPCC</string>
    <string name="email_24">salvatoriansistersph@hotmail.com</string>
    <string name="num_24">+726-2771</string>
    <string name="title_25">St. Gerard Family Life Ministry</string>
    <string name="acr_25">acronym: SGFLM</string>
    <string name="email_25">baclaranrector@yahoo.com</string>
    <string name="num_25">+832-1150</string>
    <string name="title_26">Welcome House Good Sheperd Sisters, Inc.</string>
    <string name="acr_26">acronym: Not applicable</string>
    <string name="email_26">welcomehousergs@gmail.com</string>
    <string name="num_26">563-6363</string>
    <string name="title_27">Women’s Crisis Center</string>
    <string name="acr_27">acronym: WCC</string>
    <string name="email_27">wccmanila@gmail.com</string>
    <string name="num_27">none</string>
    <string name="prompt_email">Email</string>
    <string name="logout">Logout</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT?</string>
    <string name="enter_display_name">Enter Display Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="email1">Email</string>
    <string name="list_1"><b>When You are in an Abusive Relationship </b></string>
    <string name="list_2"><b>Anti-VAW Laws</b></string>
    <string name="list_3"><b>Safety Tips for Young Women</b></string>
    <string name="list_4"><b>Are you in an abusive relationship?</b></string>
    <string name="list_5"><b>Things to Consider </b></string>
    <string name="RA7877"><b>Anti-Sexual Harassment Act of 1995</b></string>
    <string name="RA8353"><b>Anti-Rape Law of 1997</b></string>
    <string name="RA8505"><b>Rape Victim Assistance and Protection of 1998"</b></string>
    <string name="RA9208"><b>Anti-Trafficking in Persons Act of 2003 as amended by Republic Act 10364</b></string>
    <string name="RA9262"><b>Anti-Violence Against Women and their Children</b></string>
</resources>