<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="view"
            type="jazevangelio.newvawepp.ui.register.RegisterView" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimaryDark" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/register"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="start"
                    android:text="@string/account"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress"
                    />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass"
                    android:textSize="16sp"
                    android:inputType="textPassword"
                    />

                <EditText
                    android:id="@+id/et_confirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm"
                    android:textSize="16sp"
                    android:inputType="textPassword"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:visibility="gone"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="*Password must be atleast 8 characters\n*Must have at least 1 numeric and special character\n*Atleast 1 capital letter"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="20dp"
                    android:gravity="start"
                    android:text="@string/personal"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_fName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:textSize="16sp"
                    android:inputType="textCapWords"
                    />
                <EditText
                    android:id="@+id/et_lName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Age"
                    android:visibility="gone"
                    android:text=" "
                    android:inputType="number"
                    android:textSize="16sp" />
              <!--  <EditText
                    android:id="@+id/et_bday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="B"
                    android:inputType="number"
                    android:textSize="16sp" /> -->
              <EditText
                    android:id="@+id/et_bday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/birthday"
                    android:onClick="@{()->view.onBirthdayClicked()}"
                    />



                <EditText
                    android:id="@+id/et_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact"
                    android:maxLength="11"
                    android:textSize="16sp"
                    android:inputType="phone"
                    />

                <Spinner
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:inputType="textCapWords"
                    android:textSize="16sp" />

            <!--    <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="Secret Question\nthat will be used on password recovery"
                        android:textSize="12sp" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Spinner
                            android:id="@+id/spinner1"
                            android:layout_width="match_parent"
                            android:textSize="16sp"
                            android:layout_height="wrap_content"
                            android:spinnerMode="dropdown" />
                    </FrameLayout>

                    <EditText
                        android:id="@+id/et_answer"
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content"
                        android:hint="Answer"
                        android:textSize="16sp"
                        android:inputType="textCapCharacters"
                        />
                </LinearLayout> -->

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/rounded_button_solid"
                    android:onClick="@{()->view.onSubmit()}"
                    android:text="@string/submit"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>