<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorText"
    tools:context=".FakeRingingActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/incomingcall"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:contentDescription="@null"
        android:src="@drawable/fake_photo" />

    <TextView
        android:id="@+id/chosenfakename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageView1"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:text="@string/fakecallname" />

    <TextView
        android:id="@+id/chosenfakenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chosenfakename"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/fakecallnumber" />

    <ImageButton
        android:id="@+id/rejectcall"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="50dp"
        android:contentDescription="@null"
        android:background="@drawable/fake_reject" />

    <ImageButton
        android:id="@+id/answercall"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignBottom="@+id/rejectcall"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:contentDescription="@null"
        android:background="@drawable/fake_accept" />

</RelativeLayout>